--- a/game-en.html
+++ b/game-en.html
@@ -41,7 +41,7 @@
 <script>
 /*
 var canvas = document.getElementById("canvas");
-ctx = canvas.getContext("2d");
+ctx = canvas.getContext("2d");nmbjkjbjkbkl
 
 canvas.width = 800;
 canvas.height = 600;
