--- a/game-ar.html
+++ b/game-ar.html
@@ -10,7 +10,7 @@
   $(document).ready(function(e) {
     var Screenheight= $(window).height();
 	$("#landing-page-bg").css('height', Screenheight);
-
+sadsadasdadadadad
 		$(window).resize(function(){
 		  var Screenheight= $(window).height();
 	$("#landing-page-bg").css('height', Screenheight);
